--- a/frontend/front-tpfinal/src/index.html
+++ b/frontend/front-tpfinal/src/index.html
@@ -15,4 +15,21 @@
   <app-root></app-root>
 </body>
 
+
+<script>
+    function getUuid() {
+        $.ajax({
+            url: "http://3.214.234.39/api/",
+            type: 'GET',
+            success: function (res) {
+                console.log(res);
+                $('#result').html(res)
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                $('#result').html(`Error: ${xhr.status} ${thrownError}`)
+            }
+        });
+    }
+</script>
+
 </html>
